@@ -1,3 +1,5 @@
+- added endless game mode survivor (2023/07/27 MS)
+
 2.2.1:
 - added ini file for themes and option for relative icon size (2023/06/10 MS)
 
